--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
         <title>Playlist</title>
     </head>
     <body>
+        <h5>theme: Drill</h5>
+        <p>oliver's suggestion and coudn't think of anything better</p>
+        <br>
         <h1>Playlist:</h1>
         <!--<div>
             <h5>(Song name)</h5>
             <p>(Song description)</p>
+            <a href="(song link)">Link: </a>
         </div> -->
+        <div>
+            <h5>2k17</h5>
+            <p></p>
+            <a href="https://soundcloud.com/diggad-music/2k17">Link:</a>
+        </div>
+        <div>
+            <h5>Sl-tropical</h5>
+            <p></p>
+            <a href="https://soundcloud.com/tyler-sewell-464936745/sl-tropical">Link: </a>
+        </div>
+        <div>
+            <h5>(Song name)</h5>
+            <p>(Song description)</p>
+            <a href="(song link)">Link: </a>
+        </div>
     </body>
 </html>
