--- a/index.html
+++ b/index.html
@@ -26,9 +26,52 @@
         </div>
         <br>
         <div>
+            <h5>Obsessed With You</h5>
+            <p></p>
+            <a href="https://soundcloud.com/centralcee-music/obsessed-with-you">Link: </a>
+        </div>
+        <br>
+        <div>
+            <h5>Wasted</h5>
+            <p></p>
+            <a href="https://soundcloud.com/diggad-music/wasted-feat-arrdee">Link: </a>
+        </div>
+        <br>
+        <div>
+            <h5>Clash</h5>
+            <p></p>
+            <a href="https://soundcloud.com/santandave/clash-feat-stormzy">Link: </a>
+        </div>
+        <br>
+        <div>
             <h5>(Song name)</h5>
             <p>(Song description)</p>
             <a href="(song link)">Link: </a>
         </div>
+        <br>
+        <div>
+            <h5>(Song name)</h5>
+            <p>(Song description)</p>
+            <a href="(song link)">Link: </a>
+        </div>
+        <br>
+        <div>
+            <h5>(Song name)</h5>
+            <p>(Song description)</p>
+            <a href="(song link)">Link: </a>
+        </div>
+        <br>
+        <div>
+            <h5>(Song name)</h5>
+            <p>(Song description)</p>
+            <a href="(song link)">Link: </a>
+        </div>
+        <br>
+        <div>
+            <h5>(Song name)</h5>
+            <p>(Song description)</p>
+            <a href="(song link)">Link: </a>
+        </div>
+        <a href="https://soundcloud.com/discover/sets/charts-top:hiphoprap:gb">Playlist that was used for inspiration</a>
     </body>
 </html>
