--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Playlist</title>
+        <noscript>You need JS to view this site :(</noscript>
     </head>
     <body>
         <h5>theme: Drill</h5>
@@ -16,31 +17,31 @@
         <div>
             <h5>2k17</h5>
             <p></p>
-            <a href="https://soundcloud.com/diggad-music/2k17">Link:</a>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1117776205&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/diggad-music" title="Digga D" target="_blank" style="color: #cccccc; text-decoration: none;">Digga D</a> · <a href="https://soundcloud.com/diggad-music/2k17" title="2k17" target="_blank" style="color: #cccccc; text-decoration: none;">2k17</a></div>
         </div>
         <br>
         <div>
             <h5>Sl-tropical</h5>
             <p></p>
-            <a href="https://soundcloud.com/tyler-sewell-464936745/sl-tropical">Link: </a>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/386955566&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/tyler-sewell-464936745" title="Tyler sewell" target="_blank" style="color: #cccccc; text-decoration: none;">Tyler sewell</a> · <a href="https://soundcloud.com/tyler-sewell-464936745/sl-tropical" title="Sl-tropical" target="_blank" style="color: #cccccc; text-decoration: none;">Sl-tropical</a></div>
         </div>
         <br>
         <div>
             <h5>Obsessed With You</h5>
             <p></p>
-            <a href="https://soundcloud.com/centralcee-music/obsessed-with-you">Link: </a>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1120651183&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/centralcee-music" title="Central Cee" target="_blank" style="color: #cccccc; text-decoration: none;">Central Cee</a> · <a href="https://soundcloud.com/centralcee-music/obsessed-with-you" title="Obsessed With You" target="_blank" style="color: #cccccc; text-decoration: none;">Obsessed With You</a></div>
         </div>
         <br>
         <div>
             <h5>Wasted</h5>
             <p></p>
-            <a href="https://soundcloud.com/diggad-music/wasted-feat-arrdee">Link: </a>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1101354409&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/diggad-music" title="Digga D" target="_blank" style="color: #cccccc; text-decoration: none;">Digga D</a> · <a href="https://soundcloud.com/diggad-music/wasted-feat-arrdee" title="Wasted" target="_blank" style="color: #cccccc; text-decoration: none;">Wasted</a></div>
         </div>
         <br>
         <div>
             <h5>Clash</h5>
             <p></p>
-            <a href="https://soundcloud.com/santandave/clash-feat-stormzy">Link: </a>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1080178456&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/santandave" title="Dave" target="_blank" style="color: #cccccc; text-decoration: none;">Dave</a> · <a href="https://soundcloud.com/santandave/clash-feat-stormzy" title="Clash" target="_blank" style="color: #cccccc; text-decoration: none;">Clash</a></div>
         </div>
         <a href="https://soundcloud.com/discover/sets/charts-top:hiphoprap:gb">Playlist that was used for inspiration</a>
     </body>
