Updated With School Work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Playlist</title>
-        <noscript>You need JS to view this site :(</noscript>
+        <noscript>You need JS to view this site</noscript>
     </head>
     <body>
         <h5>theme: Drill</h5>
