Updated with progress in school

--- a/internet/index.html
+++ b/internet/index.html
@@ -4,16 +4,12 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1 class="title">HI.</h1>
+        <h1 class="title">Internet</h1>
         <img src="https://sean-outram.xyz/images/fav.JPG" alt="cat." width="500" height="500">
         <br>
-        <h2 class="subtitle">About me:</h2>
-        <p>
-          nothing here really
+        <h2 class="subtitle">Links:</h2>
+        <a href="internet/trust">Internet Trust</a>
+        <a href="internet/structure">Internet Structure</a>
       </p>
-      <br>
-      <h2 class="subtitle">Links:</h2>
-      <a href="playlist">Playlist</a>
-      <a href="internet">Internet</a>
     </body>
 </html>
