--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/flag.css">
     </head>
     <body>
         <h1 class="title">HI.</h1>
@@ -15,5 +16,6 @@
       <h2 class="subtitle">Links:</h2>
       <a href="playlist">Playlist</a>
       <a href="internet">Internet</a>
+      <a href="flag">Flag</a>
     </body>
 </html>
